Fix BasePitchSelector width on small devices. Increase sensitivity.

--- a/src/components/BasePitchSelector.css
+++ b/src/components/BasePitchSelector.css
@@ -43,8 +43,8 @@
 }
 
 .ps-label {
-  font-size: 1rem;
-  color: var(--fg-primary);
+  font-size: 0.9rem;
+  color: var(--fg-secondary);
   user-select: none;
   /* border: 1px solid #444; */
 }
@@ -60,4 +60,11 @@
   border-radius: 0.7rem;
   background-image: linear-gradient(to bottom, #3f3f3f, #202020, #101010);
   border: 3px solid #000;
+}
+
+/* Small screens. */
+@media (max-width: 360px) {
+  .ps-inner-grid {
+    width: 9rem;
+  }
 }
